--- a/package.json
+++ b/package.json
@@ -6,21 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:generate": "prisma generate"
   },
   "dependencies": {
+    "@emotion/cache": "^11.13.0",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.4",
+    "@mui/material-nextjs": "^5.16.4",
+    "@next/bundle-analyzer": "^14.2.5",
+    "@prisma/client": "^5.17.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "next": "14.2.5",
+    "prisma": "^5.17.0",
+    "qs": "^6.12.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-window": "^1.8.10",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/node": "^20",
+    "@types/qs": "^6.9.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/react-window": "^1.8.8",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8",
+    "typescript": "^5"
   }
 }
