--- a/compose.yml
+++ b/compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - ./config:/app/config
+      - config:/app/config
       - ./src:/app/src
       - ./prisma:/app/prisma
       - next:/app/.next
@@ -16,3 +16,4 @@ services:
 
 volumes:
   next:
+  config:
