--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextjs-mergerr",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.4",
+    "@mui/material": "^5.16.4",
     "@mui/material-nextjs": "^5.16.4",
     "@next/bundle-analyzer": "^14.2.5",
     "@prisma/client": "^5.17.0",
