--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.6",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -15,7 +15,6 @@
     "start:all": "npm run build && concurrently \"npm run start\" \"npm run db:studio\""
   },
   "dependencies": {
-    "concurrently": "^8.2.2",
     "@emotion/cache": "^11.13.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
@@ -24,6 +23,7 @@
     "@mui/material-nextjs": "^5.16.4",
     "@next/bundle-analyzer": "^14.2.5",
     "@prisma/client": "^5.17.0",
+    "concurrently": "^8.2.2",
     "fluent-ffmpeg": "^2.1.3",
     "next": "14.2.5",
     "prisma": "^5.17.0",
@@ -31,6 +31,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-window": "^1.8.10",
+    "sharp": "^0.33.5",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
