--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextjs-mergerr",
-  "version": "0.2.17",
+  "version": "0.2.18",
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
@@ -32,7 +32,8 @@
     "react-dom": "^18",
     "react-window": "^1.8.10",
     "sharp": "^0.33.5",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.24",
