--- a/.dockerignore
+++ b/.dockerignore
@@ -4,3 +4,13 @@ node_modules
 .git
 .gitignore
 .gitkeep
+Dockerfile
+dev.Dockerfile
+compose.dev.yml
+compose.dev.override.yml
+template.compose.dev.override.yml
+README.md
+*.log
+*.env
+*.env.example
+neext-env.d.ts
