--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
+    "wp:dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -23,6 +24,7 @@
     "@mui/material-nextjs": "^5.16.4",
     "@next/bundle-analyzer": "^14.2.5",
     "@prisma/client": "^5.17.0",
+    "axios": "^1.7.7",
     "concurrently": "^8.2.2",
     "fluent-ffmpeg": "^2.1.3",
     "next": "14.2.5",
