--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextjs-mergerr",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
@@ -32,8 +32,8 @@
     "next": "14.2.5",
     "prisma": "^5.17.0",
     "qs": "^6.12.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
     "react-window": "^1.8.10",
     "sharp": "^0.33.5",
     "sqlite3": "^5.1.7",
