--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.3.6",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbopack",
     "wp:dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -18,24 +18,22 @@
     "start:all": "npm run build && concurrently \"npm run start\" \"npm run db:studio\""
   },
   "dependencies": {
-    "@emotion/cache": "^11.13.5",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@fontsource/roboto": "^5.1.0",
-    "@mui/icons-material": "^6.1.9",
-    "@mui/material": "^6.1.9",
+    "@mui/icons-material": "^6.1.10",
+    "@mui/material": "^6.1.10",
     "@mui/material-nextjs": "^6.1.9",
-    "@next/bundle-analyzer": "^14.2.5",
+    "@next/bundle-analyzer": "15.0.3",
     "@prisma/client": "^5.17.0",
     "axios": "^1.7.7",
     "concurrently": "^8.2.2",
     "fluent-ffmpeg": "^2.1.3",
-    "next": "14.2.5",
+    "next": "15.0.3",
     "prisma": "^5.17.0",
     "qs": "^6.12.3",
-    "react": "19.0.0-rc.1",
-    "react-dom": "19.0.0-rc.1",
-    "react-window": "^1.8.10",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "sharp": "^0.33.5",
     "sqlite3": "^5.1.7",
     "winston": "^3.14.2"
@@ -44,12 +42,17 @@
     "@types/fluent-ffmpeg": "^2.1.24",
     "@types/node": "^20",
     "@types/qs": "^6.9.15",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-window": "^1.8.8",
+    "@types/react": "^18.3.13",
+    "@types/react-dom": "^18.3.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "typescript": "^5"
+  },
+  "overrides": {
+    "next": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   }
 }
