--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/qs": "^6.9.15",
     "@types/react": "^18.3.13",
     "@types/react-dom": "^18.3.1",
+    "babel-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
